--- a/_includes/analytics-providers/custom.html
+++ b/_includes/analytics-providers/custom.html
@@ -1,3 +1,3 @@
-<!-- start custom analytics snippet -->
+<!-- start custom comments snippet -->
 
-<!-- end cusatom analytics snippet -->
+<!-- end custom comments snippet -->
