--- a/_layout/page.html
+++ b/_layout/page.html
@@ -1,73 +1,28 @@
 ---
 layout: default
-format: page
 ---
-<main role="main" id="content" class="row">
-  <div class="{% if page.fullwidth == true %}small-12 columns{% else %}medium-8 medium-centered columns{% endif %}">
-    <article itemscope itemtype="http://schema.org/Article">
-      <meta content="{{ site.data.ui[site.lang].html_language }}" itemprop="inLanguage" />
-      <header>
+<!-- Post Featured Image -->
+{% if page.image %}
+<div class="text-center mx-auto mb-5">
+  <img class="featured-image text-center mx-auto rounded" src="{{ site.baseurl }}/{{ page.image }}" alt="{{ page.title }}">
+</div>
+{% endif %}
+<!-- End Featured Image -->
 
-        {% include helper/_video_embed.html %}
+<div class="col-lg-8 mx-auto">
 
-        {% if page.video or page.embed %}
-        {% elsif page.image %}
-        <figure>
-          <img src="{{ "/images/" | absolute_url }}{{ page.image }}" alt="{{ page.title | strip_html }}" itemprop="image">
-
-          {% if page.caption_url and page.caption %}
-          <figcaption>
-            <a href="{{ page.caption_url }}" target="_blank">{{ page.caption }}</a>
-          </figcaption>
-          {% elsif page.caption %}
-          <figcaption>
-            {{ page.caption }}
-          </figcaption>
-          {% endif %}
-        </figure>
-        {% endif %}
-
-
-        {% if page.link %}
-          <p class="subheadline">Link</p>
-        {% elsif page.subheadline %}
-          <p class="subheadline">{{ page.subheadline }}</p>
-        {% endif %}
-
-
-        <h1 itemprop="name headline">{{ page.title | remove: '<p>' | remove: '</p>' }}</h1>
-      </header>
-
-
-      <div class="main-content" itemprop="articleSection">
-        {% if page.quote %}<blockquote style="margin: 0;">{{ page.quote }}</blockquote>{% endif %}
-        {{ content }}
-
-
-        {% if page.link %}
-          <p><a class="button" href="{{ page.link }}" title="{{ site.data.ui[site.lang].source }} › {{ page.title }}">{{ site.data.ui[site.lang].check_out_link }}</a></p>
-        {% endif %}
-
-      </div><!-- /.content -->
-
-
-      {% if page.comments == true %}
-      {% include helper/_comments.html %}
-      {% endif %}
-
-
-      {% if page.show_meta == true %}
-      <footer>
-        <p><small>
-          {% if page.author %}{{ site.data.ui[site.lang].written_by }} {{ page.author }} // {% endif %}
-          {% capture time %}{{ page.date }}{% endcapture %}
-          <time datetime="{{ time | truncate: 13 | remove: '...' }}" itemprop="datePublished">{{ time | truncate: 13 | remove: '...' }}</time>
-        </small></p>
-      </footer>
-      {% endif %}
-
-
-      {% include helper/_pagination.html %}
-    </article>
+  <div class="mainheading">
+    <h1 class="posttitle">{{ page.title }}</h1>
   </div>
-</main><!-- /.row -->
+
+  <div class="article-post serif-font">
+    {{content}}
+  </div>
+
+  {% if page.comments == true %}
+  <div id="comments">             
+      {% include disqus.html %} 
+  </div>
+  {% endif %}
+
+</div>
