modified:   _layout/default.html

--- a/_layout/default.html
+++ b/_layout/default.html
@@ -87,7 +87,7 @@
         <img class="logo"alt="ezees blog">
       </a></a>
 
-      <h1 class="text-white text-glow self-center">ezee's Blog</h1>
+      <h1 class="text-white text-glow self-center">Mr.TonG's Blog</h1>
     </div>
 
     <div class="columns-2 flex flex-col lg:flex-row basis-1/2 mt-5 mx-5">
