--- a/_layout/default.html
+++ b/_layout/default.html
@@ -84,7 +84,7 @@
   <header class="container my-5">
     <div class="columns-1 w-max flex flex-row mx-5">
     	  <a href="{{ site.url }}" class="m-2">
-        <img class="logo"alt="ezees blog">
+        <img class="avatar"alt="avatar">
       </a></a>
 
       <h1 class="text-white text-glow self-center">Mr.TonG's Blog</h1>
