--- a/_layout/posts.html
+++ b/_layout/posts.html
@@ -1,5 +1,7 @@
 ---
-layout: default 
+layout: default
+comments: true
+# other options
 ---
 
 <div class="columns-1 bg-c-gray rounded-md px-5 py-5 m-shadow mx-5">
