--- a/_layout/splash.html
+++ b/_layout/splash.html
@@ -1,6 +1,9 @@
 ---
 layout: default
+comments: true
+# other options
 ---
+
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
   {% include page__hero.html %}
