--- a/_layout/default.html
+++ b/_layout/default.html
@@ -53,7 +53,7 @@
       "@type": "BlogPosting",
       "name": "{{ page.title }}",
       "url": "{{ site.url }}{{ page.url }}",
-      "logo": "{{ site.url }}/images/og_twh_2.jpg",
+      "logo": "{{ site.url }}/images/a-logo.jpg",
       "image":"{{ site.url }}{{ page.image }}",
       "headline": {{ page.title | jsonify }},
       "datePublished": {{ page.date | jsonify }},
