--- a/_layout/home.html
+++ b/_layout/home.html
@@ -8,7 +8,7 @@ layout: archive
   <div class="relative w-full lg:w-1/3 xl:w-2/5 2xl:w-1/2 lg:h-screen">
     <div class="h-full">
       <img class="absolute object-cover object-center w-full h-full"
-        src="/img/avatar.jpg"/> 
+        src="assets/images/bio-photo.png" /> 
 
 
       <div class="relative flex flex-col h-full p-12 text-center text-white lg:text-left lg:justify-between">
